# prompt_bookmarks

./: .cursorrules  .dxtignore  .gitignore  BUNDLE_README.md  README.md  index.js  install.py  install_deps.js  manifest.json  package.json  prompt-bookmarks.dxt  prompt-bookmarks.mcpb  pyproject.toml  requirements.txt  run_server.py
prompt-bookmarks-dxt/: manifest.json  run_server.py
src/prompt_bookmarks/: __init__.py  cli.py  database.py  mcp_server.py  models.py
src/prompt_bookmarks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
